<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/arka_plan"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.MainActivity"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnStartGame"
            android:layout_width="120dp"
            android:layout_height="42dp"
            android:layout_margin="10dp"
            android:background="@drawable/button_background"
            android:text="@string/start_game"
            android:textColor="#FFF" />
    <Button
        android:layout_margin="10dp"
        android:id="@+id/btnHighScore"
        android:background="@drawable/button_background"
        android:textColor="#FFF"
        android:layout_width="120dp"
        android:layout_height="42dp"
        android:text="@string/high_score" />
    <Button
        android:id="@+id/btnHighScoreParagraph"
        android:visibility="gone"
        android:gravity="center"
        android:layout_margin="10dp"
        android:textColor="@color/White"
        android:background="@drawable/selection_button_background"
        android:text="@string/paragraph"
        android:layout_width="120dp"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btnHighScoreSingleWord"
        android:visibility="gone"
        android:gravity="center"
        android:layout_margin="10dp"
        android:textColor="@color/White"
        android:background="@drawable/selection_button_background"
        android:text="@string/single_word"
        android:layout_width="120dp"
        android:layout_height="wrap_content"/>
    <Button
        android:visibility="gone"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:id="@+id/btnSingleWord"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/selection_button_background"
        android:text="@string/single_word"
        android:textColor="#FFF"/>
    <Button
        android:visibility="gone"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        android:id="@+id/btnParagraph"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/selection_button_background"
        android:text="@string/paragraph"
        android:textColor="#FFF"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textCurrentUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/current_user"
        android:textAlignment="textEnd"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="20dp" />
</androidx.constraintlayout.widget.ConstraintLayout>